Clear MainThreadLoaderHolder::m_workerLoader appropriately

This CL fixes a violation for a DCHECK that states |m_workerLoader| should be
cleared before the MainThreadLoaderHolder's destruction.

BUG=635436

Review-Url: https://codereview.chromium.org/2256103002
Cr-Commit-Position: refs/heads/master@{#412758}